# gmpc-glyros

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.markup  README.textile  configure.ac
pkg/: PKGBUILD
src/: Makefile.am  config.h.in  plugin.c
